@@ -2,6 +2,11 @@
 			A very simple session manager
 			by Thomas Leonard
 
+13-Feb-2003
+~~~~~~~~~~~
+Added DnD threshold and GTK theme XSettings. Updated to new Options code
+(fixes minor bug with the language indicator).
+
 11-Feb-2003
 ~~~~~~~~~~~
 Shade power buttons if no command is set (KRJW).
